--- a/index.html
+++ b/index.html
@@ -14,30 +14,27 @@
 </a>
 </div>
 <div class="middlebar">
-    <select name="Products" id="Products">Products
+    <select name="Products">Products
 <option value="">Products</option>
         
     </select>
    
-    <select name="Solutions" id="solutions">Solutions
+    <select name="Solutions" >Solutions 
         <option value="">Solutions</option>
     </select>
  
 
-<select name="developers" id="developers">Developers
+<select name="developers" >Developers
     <option value="">Developers</option>
 </select>
 
 
-<select name="partners" id="partners">Partners
+<select name="partners" >Partners
     <option value="">Partners</option>
 </select>
-
-
-
-
-
-
+<select name="Pricing">
+    <Option>Pricing</Option>
+</select>
 
 </div>
         
